<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/country"
                android:id="@+id/textView2"
                android:singleLine="false"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/genre"
                android:id="@+id/textView3"
                android:singleLine="false"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/language"
                android:id="@+id/textView"
                android:singleLine="false"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <Spinner
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Spinner
                android:id="@+id/style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Spinner
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button 1"
                android:id="@+id/button"
                android:layout_weight="1" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button 2"
                android:id="@+id/button2"
                android:layout_weight="1" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Button 3"
                android:id="@+id/button3"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>



    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoriteStations"
        android:id="@+id/switch1"
        android:layout_gravity="center" />


    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/station"
        android:layout_gravity="left|center_vertical"/>

</LinearLayout>